<resources>
    <string name="app_name">FML24</string>
    <string name="action_settings">More</string>
    <string name="title_activity_intro_to_login">IntroToLoginActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed">Free Mobile Jackpot</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Submit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_id_after_login">user_id_after_login</string>
    <string name="defaultTextNumberField">Pick 4 Numbers</string>

    <!-- Strings related to Email Change -->
    <string name="email_change_button">Change</string>
    <string name="change_email_hint">Enter new email</string>



    <!--INTRO STRINGS STARTS -->
        <string name="next">NEXT</string>
        <string name="skip">SKIP</string>
        <string name="start">GOT IT</string>

        <string name="slide_1_title">The first FREE lottery on the \nmobile and tablet. Win real \nmoney completely free.</string>
        <string name="slide_1_desc">Swipe to learn more</string>

        <string name="item_1_title">Win real cash prizes.</string>
        <string name="item_1_desc">Yes, it\'s completely free \nto play and win.</string>

        <string name="slide_2_item_2_title">How?</string>
        <string name="slide_2_item_2_desc">Watch a short video ad \nfor a chance to win our \ngrand jackpot and other \ncash prizes.</string>

        <string name="slide_2_item_3_title">It\'s simple.</string>
        <string name="slide_2_item_3_desc">Pick your lucky numbers \nor have it done randomly. \nThen sit back and enjoy \na short video ad. Repeat \nto increase your chances \n of winning!</string>

        <string name="slide_3_title">All you need is an email to get started.</string>
        <string name="slide_3_condition_1">Your email is your key to claiming your prizes. Please use a private email that only you have access to. See Contest Rules &amp; Conditions and FAQ for more information.</string>
        <string name="slide_3_condition_2">By using Free Mobile Lottery, you agree to our Privacy Policy and abide by our Contest Rules &amp; Conditions (See last Tab).</string>

        <string name="slide_4_title">World Travel</string>
        <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

        <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
        <string name="play_again">Play Again</string>

    <!--INTRO STRINGS ENDS -->

    <!-- MORE STRINGS STARTS -->
    <string name="currentEmailAddressLabel">Current Email Address</string>
    <!-- MORE STRINGS ENDS -->

</resources>
